<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >
        <ImageView
            android:id="@+id/logo_lantern"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logo_title"
            android:src="@drawable/logo_greenlantern" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:text="@string/subtitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_description"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2_1"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2_2"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2_3"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2_4"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2_5"
                android:textSize="@dimen/answer_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question1"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/answer_3_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_1"
                    android:textSize="@dimen/answer_text_size"/>
                <RadioButton
                    android:id="@+id/answer_3_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_2"
                    android:textSize="@dimen/answer_text_size"/>
                <RadioButton
                    android:id="@+id/answer_3_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_3"
                    android:textSize="@dimen/answer_text_size"/>
                <RadioButton
                    android:id="@+id/answer_3_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_4"
                    android:textSize="@dimen/answer_text_size"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_1"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_2"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_3"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_4"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_5"
                android:textSize="@dimen/answer_text_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5_6"
                android:textSize="@dimen/answer_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/question_text_size"
                android:text="@string/question6"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_text_size"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>